# research-to-report

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
.VSCodeCounter/2026-03-13_12-26-00/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-03-13_21-50-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.claude/: settings.json  settings.local.json
docs/plans/: charts-images-design-v1.md  charts-images-implementation-v1.md  research-to-report-design-v1.md  research-to-report-implementation-v1.md
src/: main.py
src/agents/: orchestrator.py  researcher.py  synthesizer.py
src/config/: __init__.py  config.py
src/delivery/: approval.py  email_sender.py
src/log/: logger.py  state.py
src/pdf/: formatter.py  translator.py
src/research_to_report.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/run/: preflight.py  resume.py  scheduler.py
src/tools/: notebooklm_reader.py  web_search.py
tests/: test_approval.py  test_config.py  test_email_sender.py  test_logger.py  test_main.py  test_orchestrator.py  test_pdf_charts_images.py  test_pdf_formatter.py  test_preflight.py  test_researcher.py  test_resume.py  test_scheduler.py  test_state.py  test_synthesizer.py  test_tools.py
