[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "research-to-report"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
research-report = "main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
